# botris-cpp-stackoverflow

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  test.cpp  tetris.hpp
src/api/: botris.hpp  botris_api.cpp  botris_api.hpp  movegen.hpp
src/strategies/: arbiter.hpp  downstack.hpp  pc.hpp  strategy.hpp  stride90.hpp
src/tests/: TestBoard.cpp  TestCheckPiece.cpp  TestClearLines.cpp  TestMoveGen.cpp  TestPrintPiece.cpp  utils.cpp  utils.hpp
